noinst_LIBRARIES = librtmp.a

librtmp_a_LDFLAGS = -avoid-version

librtmp_a_SOURCES = \
        log.c \
        rtmp.c \
        amf.c \
        hashswf.c \
        parseurl.c 

noinst_HEADERS = \
        amf.h  \
        bytes.h  \
        dhgroups.h \
        dh.h  \
        handshake.h \
        http.h \
        log.h \
        rtmp.h \
        rtmp_sys.h

librmtp_a_CFLAGS = -NOCRYPTO
